--- a/common/pom.xml
+++ b/common/pom.xml
@@ -23,6 +23,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>common</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
 
     <dependencies>
