--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
     <name>data-and-analytics</name>
 
     <modules>
-        <module>common</module>
         <module>salesforce-to-txt</module>
     </modules>
 
@@ -93,6 +92,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.beam</groupId>
+            <artifactId>beam-runners-google-cloud-dataflow-java</artifactId>
+            <version>2.42.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.beam</groupId>
             <artifactId>beam-sdks-java-io-google-cloud-platform</artifactId>
             <exclusions>
                 <exclusion>
@@ -100,6 +104,11 @@
                     <artifactId>junit</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.7</version>
         </dependency>
     </dependencies>
 
