--- a/salesforce-to-txt/pom.xml
+++ b/salesforce-to-txt/pom.xml
@@ -27,9 +27,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.akvelon</groupId>
-            <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>io.cdap.cdap</groupId>
+            <artifactId>cdap-api-common</artifactId>
+            <version>${cdap.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cdap.plugin</groupId>
+            <artifactId>hydrator-common</artifactId>
+            <version>2.4.0</version>
         </dependency>
         <dependency>
             <groupId>com.akvelon</groupId>
@@ -40,6 +45,36 @@
             <groupId>io.cdap.cdap</groupId>
             <artifactId>cdap-api</artifactId>
             <version>${cdap.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cdap.cdap</groupId>
+            <artifactId>cdap-etl-api</artifactId>
+            <version>${cdap.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cdap.cdap</groupId>
+            <artifactId>cdap-common</artifactId>
+            <version>${cdap.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.1-jre</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>1.31.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud.bigdataoss</groupId>
+            <artifactId>util</artifactId>
+            <version>2.1.6</version>
         </dependency>
     </dependencies>
 </project>
