Add failsafe elements, writing to deadletter table

--- a/salesforce-to-bigquery/pom.xml
+++ b/salesforce-to-bigquery/pom.xml
@@ -103,6 +103,17 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>com.google.auto.value</groupId>
+            <artifactId>auto-value</artifactId>
+            <version>1.7.4</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.auto.value</groupId>
+            <artifactId>auto-value-annotations</artifactId>
+            <version>1.7.4</version>
+        </dependency>
+        <dependency>
             <groupId>io.cdap.cdap</groupId>
             <artifactId>cdap-etl-api</artifactId>
             <version>${cdap.version}</version>
