--- a/salesforce-to-bigquery/pom.xml
+++ b/salesforce-to-bigquery/pom.xml
@@ -43,6 +43,10 @@
                     <groupId>ch.qos.logback</groupId>
                     <artifactId>logback-classic</artifactId>
                 </exclusion>
+                <exclusion>  <!-- declare the exclusion here -->
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
 <!--        <dependency>-->
@@ -101,6 +105,10 @@
                     <groupId>ch.qos.logback</groupId>
                     <artifactId>logback-classic</artifactId>
                 </exclusion>
+                <exclusion>  <!-- declare the exclusion here -->
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
@@ -108,10 +116,6 @@
             <artifactId>cdap-salesforce-plugins</artifactId>
             <version>1.5.1</version>
             <exclusions>
-                <exclusion>  <!-- declare the exclusion here -->
-                    <groupId>org.apache.beam</groupId>
-                    <artifactId>beam-sdks-java-io-sparkreceiver-2</artifactId>
-                </exclusion>
                 <exclusion>  <!-- declare the exclusion here -->
                     <groupId>org.slf4j</groupId>
                     <artifactId>jul-to-slf4j</artifactId>
