--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-  ~ Copyright (C) 2019 Google Inc.
-  ~
   ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not
   ~ use this file except in compliance with the License. You may obtain a copy of
   ~ the License at
@@ -35,15 +33,8 @@
         <autovalue.service.version>1.0-rc6</autovalue.service.version>
         <checkstyle.version>8.7</checkstyle.version>
         <beam.version>2.45.0</beam.version>
-        <beam-vendor-guava.version>0.1</beam-vendor-guava.version>
-        <hamcrest.version>2.1</hamcrest.version>
-        <hadoop.version>2.10.1</hadoop.version>
-        <guava.version>30.1-jre</guava.version>
         <java.version>1.8</java.version>
         <jib.maven.version>2.6.0</jib.maven.version>
-        <junit.version>4.13</junit.version>
-        <junit-dep.version>4.10</junit-dep.version>
-        <opensensus.version>0.24.0</opensensus.version>
         <surefire.version>2.21.0</surefire.version>
         <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
         <maven-compiler-plugin.version>3.6.2</maven-compiler-plugin.version>
@@ -51,16 +42,10 @@
         <maven-enforcer-plugin.version>3.0.0-M1</maven-enforcer-plugin.version>
         <maven-javadoc-plugin.version>3.0.0-M1</maven-javadoc-plugin.version>
         <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
-        <maven-shade-plugin.version>3.0.0</maven-shade-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-        <mockito-core.version>3.0.0</mockito-core.version>
         <os-maven-plugin.version>1.5.0.Final</os-maven-plugin.version>
-        <slf4j.version>1.7.25</slf4j.version>
         <mvn-target-dir>${basedir}/target</mvn-target-dir>
-        <json.version>20200518</json.version>
-        <excluded.spanner.tests>com.google.cloud.teleport.v2.spanner.IntegrationTest</excluded.spanner.tests>
         <spotless-maven-plugin.version>2.12.1</spotless-maven-plugin.version>
-        <cdap.version>6.5.1</cdap.version>
     </properties>
 
     <dependencyManagement>
@@ -101,17 +86,8 @@
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-log4j12</artifactId>
                 </exclusion>
-<!--                <exclusion>  &lt;!&ndash; declare the exclusion here &ndash;&gt;-->
-<!--                    <groupId>ch.qos.logback</groupId>-->
-<!--                    <artifactId>logback-classic</artifactId>-->
-<!--                </exclusion>-->
             </exclusions>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.slf4j</groupId>-->
-<!--            <artifactId>slf4j-jdk14</artifactId>-->
-<!--            <version>1.7.30</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.apache.beam</groupId>
             <artifactId>beam-sdks-java-io-sparkreceiver-2</artifactId>
@@ -134,6 +110,16 @@
         <dependency>
             <groupId>org.apache.beam</groupId>
             <artifactId>beam-runners-google-cloud-dataflow-java</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.confluent</groupId>
+                    <artifactId>kafka-avro-serializer</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.confluent</groupId>
+                    <artifactId>kafka-schema-registry-client</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.beam</groupId>
@@ -205,58 +191,6 @@
 
         <pluginManagement>
             <plugins>
-
-                <!--
-                    The jib plugin provides the capability to containerize this application based on
-                    properties specified in the configuration without having to build a Dockerfile manually.
-                     Jib also integrates with the maven lifecycle and helps push the image to the repository
-                    specified in the configuration or via the command line.
-                        https://github.com/GoogleContainerTools/jib/tree/master/jib-maven-plugin
-                    -->
-<!--                <plugin>-->
-<!--                    <groupId>com.google.cloud.tools</groupId>-->
-<!--                    <artifactId>jib-maven-plugin</artifactId>-->
-<!--                    <version>${jib.maven.version}</version>-->
-<!--                    <configuration>-->
-<!--                        <from>-->
-<!--                            &lt;!&ndash;-->
-<!--                            The Dataflow Template base image to use. This-->
-<!--                             should not need to change unless we want to use the JDK11-->
-<!--                             &ndash;&gt;-->
-<!--                            <image>${base-container-image}:${base-container-image.version}</image>-->
-<!--                        </from>-->
-<!--                        <container>-->
-<!--                            &lt;!&ndash;-->
-<!--                            The root directory to use to expand the compiled classes and dependencies in. The-->
-<!--                            Jib plugin  will create the following directories under this root:-->
-<!--                              - resources: All the files under src/resources will be copied to this folder as-is.-->
-<!--                              - libs: All dependency jars needed to execute this pipeline will be copied into this-->
-<!--                                      folder.-->
-<!--                              - classes: Compiled pipeline code will be copied into this folder.-->
-<!--                            The libs and classes folders under appRoot should thus be added in the classpath-->
-<!--                            defined in src/resources/command-spec.json.-->
-<!--                            &ndash;&gt;-->
-<!--                            <appRoot>${app-root}</appRoot>-->
-<!--                            &lt;!&ndash;-->
-<!--                            INHERIT the base containers entrypoint. Do not override or the Dataflow service-->
-<!--                            will be unable to launch this template.-->
-<!--                            &ndash;&gt;-->
-<!--                            <entrypoint>INHERIT</entrypoint>-->
-<!--                            <environment>-->
-<!--                                &lt;!&ndash;-->
-<!--                                Set an environment variable called DATAFLOW_JAVA_COMMAND_SPEC that points to the-->
-<!--                                java-command-spec.json file inside the container. Note that since the Jib plugin-->
-<!--                                copies the containers of src/resources/* to appRoot/resources, the value of this-->
-<!--                                environment variable can be set here.-->
-<!--                                &ndash;&gt;-->
-<!--                                <DATAFLOW_JAVA_COMMAND_SPEC>-->
-<!--                                    ${command-spec}-->
-<!--                                </DATAFLOW_JAVA_COMMAND_SPEC>-->
-<!--                            </environment>-->
-<!--                        </container>-->
-<!--                    </configuration>-->
-
-<!--                </plugin>-->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
@@ -561,17 +495,12 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
                 <configuration>
-                    <!-- Exclude Cloud Spanner integration tests that require a GCP project to run.
-                    They can be run run manually using
-                    TODO: Add support for emulator to run integration tests.
-                    'mvn -Dexcluded.spanner.tests="" -Dtest=<testname> test' -->
                     <systemProperties>
                         <property>
                             <name>nashorn.args</name>
                             <value>--no-deprecation-warning</value>
                         </property>
                     </systemProperties>
-                    <excludedGroups>${excluded.spanner.tests}</excludedGroups>
                 </configuration>
             </plugin>
 
