--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  ~ Copyright 2023 Akvelon Inc.
+  ~
   ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not
   ~ use this file except in compliance with the License. You may obtain a copy of
   ~ the License at
@@ -46,6 +48,7 @@
         <os-maven-plugin.version>1.5.0.Final</os-maven-plugin.version>
         <mvn-target-dir>${basedir}/target</mvn-target-dir>
         <spotless-maven-plugin.version>2.12.1</spotless-maven-plugin.version>
+        <cdap.version>6.5.1</cdap.version>
     </properties>
 
     <dependencyManagement>
